# uniprot-genome-features-pipeline

./: Makefile  README.md  cli.py  constants.py  process_ncbitaxon.py  pyproject.toml  robot_utils.py
src/uniprot-genome-features-pipeline/: cli.py  process_ncbitaxon.py  uniprot_utils.py
