[tool.poetry]
name = "uniprot-genome-features-pipeline"
version = "0.1.0"
description = "Uniprot jenkins pipeline"
authors = ["bsantan <70932395+bsantan@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
kgx = "^2.2.5"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
tqdm = "^4.66.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
up = "uniprot-download.cli:main"